<resources>
    <string name="app_name">hotel</string>
    <string name="Login">Login</string>
    <string name="email">email\n</string>
    <string name="password">password\n</string>
    <string name="Email">Email\n</string>
    <string name="Password">Password\n</string>
    <string name="Register">Register</string>
    <string name="LOGOUT">LOGOUT\n</string>
    <string name="Click_to_register">click_to_register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="search">search\n</string>
    <string name="settings">settings</string>
    <string name="HotelSearching">HotelSearching</string>
    <string name="Name">Name</string>


</resources>